# bcvk-orig

./: Cargo.toml  Dockerfile  Justfile  Makefile  PLAN.md  README.md  build-dependencies.txt  dependencies.txt
.claude/: settings.local.json
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  main.yml  release.yml  scheduled-release.yml
crates/agent-macos/: Cargo.toml
crates/integration-tests/: Cargo.toml  README.md
crates/integration-tests/src/: main.rs
crates/integration-tests/src/tests/: libvirt_upload_disk.rs  libvirt_verb.rs  mount_feature.rs  run_ephemeral.rs  run_ephemeral_ssh.rs  run_install.rs  to_disk.rs
crates/kit/: Cargo.toml
crates/kit/scripts/: entrypoint.sh  run_qemu.sh
crates/kit/src/: arch.rs  boot_progress.rs  cli_json.rs  container_entrypoint.rs  containerenv.rs  domain_list.rs  entrypoint-linux.sh  entrypoint-macos.sh  entrypoint.rs  envdetect.rs  ephemeral.rs  hostexec.rs  images.rs  init.rs  install_options.rs  libvirt.rs  libvirt_upload_disk.rs  main.rs  podman.rs  podman_bootc.rs  qemu.rs  reinstall.py  run_ephemeral.rs  run_ephemeral_ssh.rs  run_install.rs  runrmvm.rs  setup_storage.sh  ssh.rs  sshcred.rs  status_monitor.rs  supervisor_status.rs  systemd.rs  to_disk.rs  utils.rs  virtinstall.rs  virtiofsd.rs  vm.rs
crates/kit/src/libvirt/: create.rs  domain.rs  inspect.rs  list.rs  list_volumes.rs  mod.rs  rm.rs  run.rs  ssh.rs  start.rs  stop.rs  upload.rs
crates/kit/src/podman_bootc/: domain_list.rs  vm_registry.rs
crates/kit/tests/: run_ephemeral.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: man.rs  xtask.rs
docs/: .gitignore  AGENTS.md  HACKING.md  book.toml  footer.html  mermaid-init.js
docs/src/: SUMMARY.md  architecture.md  building.md  container-vm-conversion.md  contributing.md  disk-images.md  ephemeral-run.md  ephemeral-ssh.md  image-management.md  installation.md  introduction.md  libvirt-advanced.md  libvirt-manage.md  libvirt-run.md  network-config.md  quick-start.md  storage-management.md  testing.md  tool-selection.md  vs-bootc.md  vs-podman-bootc.md  workflow-comparison.md
docs/src/man/: bcvk-ephemeral-run-ssh.md  bcvk-ephemeral-run.md  bcvk-ephemeral-ssh.md  bcvk-ephemeral.md  bcvk-hostexec.md  bcvk-images-list.md  bcvk-images.md  bcvk-libvirt-create.md  bcvk-libvirt-inspect.md  bcvk-libvirt-list.md  bcvk-libvirt-rm.md  bcvk-libvirt-run.md  bcvk-libvirt-ssh.md  bcvk-libvirt-start.md  bcvk-libvirt-stop.md  bcvk-libvirt-upload.md  bcvk-libvirt.md  bcvk-pb-inspect.md  bcvk-pb-list.md  bcvk-pb-rm.md  bcvk-pb-run.md  bcvk-pb-ssh.md  bcvk-pb-start.md  bcvk-pb-stop.md  bcvk-pb.md  bcvk-run-ephemeral-ssh.md  bcvk-run-ephemeral.md  bcvk-run-install.md  bcvk-ssh.md  bcvk-to-disk.md  bcvk.md
docs/todo/: libvirt.md  podman-bootc.md
